--- a/src/ID/ID/Views/Shared/_Layout.cshtml
+++ b/src/ID/ID/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Cvv">CVV</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Registration" asp-action="Index">Registration</a>
+                        </li>
                     </ul>
                 </div>
             </div>
